# mc-pack-tamplates-generator

./: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  pyproject.toml  setup.cfg
src/mc_pack_template/: __init__.py  create_templates.py
