[metadata]
name = mc-pack-template
version = 0.1.0
author = 3ricsonn
author_email = 3ricsonn@protonmail.com
description = Generating basic directory structure for minecraft data packs or resource packs.
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Natural Language :: English

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mc_pack_template = mc_pack_template:start